<resources>
    <string name="app_name">酷乐购</string>
    <string name="tab_title_home">首页</string>
    <string name="tab_title_around">周边</string>
    <string name="tab_title_me">我的</string>
    <string name="tab_title_more">更多</string>
    <string name="wait_dialog_title">加载中，请稍后...</string>
    <string name="error_please_check_network">网络无法连接，请检查网络！</string>
    <string name="error_timeout">请求超时</string>
    <string name="error_not_found_server">无法连接服务器</string>
    <string name="error_url_error">URL错误！</string>
    <string name="error_not_found_cache">找不到缓存</string>
    <string name="error_system_unsupport_method">不支持该请求！</string>
    <string name="error_parse_data_error">数据转换错误</string>
    <string name="error_unknow">未知错误</string>
    <string name="titleBar_search_hint">请输入商品名、品类或商铺</string>
    <string name="around">周边</string>
    <string name="around_all">全部</string>
    <string name="around_supplier_list_all">全部</string>
    <string name="around_supplier_list_sort">综合排序</string>
    <string name="around_supplier_list_activity">优惠活动</string>
    <string name="around_toolbar_action_edit">编辑</string>
    <string name="detail_sure_anytime">随时退</string>
    <string name="detail_sure_overdue">过期退</string>
    <string name="detail_sure_sevenday">七天退</string>
    <string name="detail_merchant_info">商家信息</string>
    <string name="detail_desc_title_currentOrder">本单详情</string>
    <string name="detail_desc_title_tips">温馨提示</string>
    <string name="detail_desc_title_recommend">看了又看</string>
    <string name="detail_desc_check_detail">查看图文详情</string>
    <string name="detail_bottom_buy">立即购买</string>
    <string name="detail_bottom_retail_price">门市价</string>
    <string name="detail_bought">已售</string>


    <string name="me_login_balance">账户余额:</string>
    <string name="me_nologin_not_login">您还没有登录哦</string>
    <string name="me_nologin_login">立即登录</string>
    <string name="me_user_coupons">优惠券</string>
    <string name="me_user_cart">购物车</string>
    <string name="me_user_favorite">收藏</string>
    <string name="me_user_history">最近浏览</string>
    <string name="me_item_unpaid_order">待付款订单</string>
    <string name="me_item_paid_order">已付款订单</string>
    <string name="me_item_lottery_order">抽奖单</string>
    <string name="me_item_treasure_order">夺宝单</string>
    <string name="me_item_unpaid_uncomment">未评价</string>
    <string name="me_item_bankcard">我的银行卡</string>
    <string name="me_item_bankcard_go_complete">去完善</string>
    <string name="me_item_recommend">每日推荐</string>
    <string name="me_item_coupons">抵用券</string>
    <string name="me_item_qr">扫一扫</string>
    <string name="login_titleBar_login">登录</string>
    <string name="login_titleBar_register">注册</string>
    <string name="login_bottom_use_third_account">使用第三方账号登陆</string>
    <string name="login_select_quick_login">快速登录</string>
    <string name="login_select_account_login">账号登录</string>
    <string name="login_input_username_hint">请输入手机号/邮箱/用户名</string>
    <string name="login_input_phoneNumber_hint">请输入手机号</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_input_check_code_hint">请输入验证码</string>
    <string name="login_input_btn_get_code">获取验证码</string>
    <string name="login_account_forget_password">忘记密码</string>
    <string name="login_input_repassword_hint">请确认密码</string>
    <string name="register_tips">登录密码为6位以上数字和字母的组合，区分大小写</string>
    <string name="reSend">重新发送</string>
    <string name="sms_code_send_success">验证码已成功发送至您的手机，请注意查收</string>
    <string name="phone_number_incorrect">手机号输入不正确</string>
    <string name="sms_code_send_failure">验证码发送失败</string>
    <string name="quick_login_input_incorrect">您的手机号或验证码输入有误</string>
    <string name="my_collection">我的收藏</string>
    <string name="collect_have_no_collection">您还没有收藏任何商品</string>
    <string name="collect_titleBar_manager">管理</string>
    <string name="register_password_not_consistant">两次输入的密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="register_failure">注册失败</string>
    <string name="register_input_incorrect">您输入的信息不正确，请检查你的输入</string>
    <string name="collect_failed">收藏失败</string>
    <string name="collect_success">收藏成功</string>
    <string name="uncollect_success">取消收藏</string>
    <string name="more_item_only_wifi_show_picture">仅在WIFI下显示图片</string>
    <string name="more_item_message_notice">消息提醒</string>
    <string name="more_item_share_settings">分享设置</string>
    <string name="more_item_clear_cache">清除缓存</string>
    <string name="more_item_good_comment">赏个好评</string>
    <string name="more_item_feedback">意见反馈</string>
    <string name="more_item_contact_kefu">联系客服</string>
    <string name="more_item_kefu_number">18186532328</string>
    <string name="more_item_current_version">当前版本 V1.0</string>
    <string name="more_item_check_update">检查更新</string>
    <string name="more_item_about">关于</string>
    <string name="more_item_default_cache_size">0.00KB</string>
    <string name="more_item_kefu_hours">(8:00-22:00)</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="open_app_market_failed">打开应用商店失败</string>
    <string name="current_version">当前版本 V</string>
    <string name="version_unknown">版本未知</string>
    <string name="user_center">个人中心</string>
    <string name="login_input_empty">用户名或密码为空</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="user_item_title_username">用户名</string>
    <string name="user_item_right_modify">修改</string>
    <string name="user_item_title_nickname">昵称</string>
    <string name="user_item_right_edit">编辑</string>
    <string name="user_item_title_bindPhone">绑定手机号</string>
    <string name="user_item_right_unbind">未绑定</string>
    <string name="user_item_title_pay_password">支付密码</string>
    <string name="user_item_right_unset">未设置</string>
    <string name="user_item_title_login_password">登录密码</string>
    <string name="user_item_title_avatar">头像</string>
    <string name="man">男</string>
    <string name="user_item_title_gender">性别</string>
    <string name="user_item_title_birthday">生日</string>
    <string name="user_item_right_select">请选择</string>
    <string name="user_item_title_address">收货地址</string>
    <string name="user_item_title_qr">我的二维码</string>
    <string name="user_exit_login">退出登录</string>
    <string name="user_item_title_member_level">会员等级</string>
    <string name="auth_cancel">取消授权</string>
    <string name="auth_error">授权失败</string>
    <string name="auth_success">授权成功</string>
    <string name="cart">购物车</string>
    <string name="cart_empty">您的购物车为空</string>
    <string name="history_empty">您还没有浏览记录</string>
    <string name="paid_order_empty">您没有已付款订单</string>
    <string name="unpaid_order_empty">您没有未付款订单</string>
    <string name="lottery_order_empty">您还没有抽奖单</string>
    <string name="treasure_order_empty">夺宝单为空</string>
    <string name="coupons_empty">您还没有抵用券</string>
    <string name="current_city">当前城市</string>
    <string name="input_city_to_search">请输入要查找的城市</string>
    <string name="not_find_city">抱歉，暂时没有找到相关城市</string>
    <string name="location_failure">定位失败，请重试</string>
    <string name="location_ing">正在定位...</string>
    <string name="recent_city">最近浏览城市</string>
    <string name="hot_city">热门城市</string>
    <string name="location_city">定位城市</string>
    <string name="no_message">您还没有收到消息哦</string>
    <string name="message">消息</string>
    <string name="plugin_not_installed">监测到本机尚未安装支付插件,无法进行支付,请先安装插件(无流量消耗)</string>
    <string name="plugin_not_latest">监测到本机的支付插件不是最新版,最好进行更新,请先更新插件(无流量消耗)</string>
    <string name="pay_result_unknow">支付结果未知,请稍后手动查询</string>
    <string name="pay_success">支付成功</string>
    <string name="get_order_success">获取订单成功!请等待跳转到支付页面~</string>
    <string name="check_no_plugin">监测到你尚未安装支付插件,无法进行支付,请先安装插件(已打包在本地,无流量消耗),安装结束后重新支付</string>
    <string name="pay_interrupt">支付中断</string>
</resources>
