<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/more_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/around_toolbar_height"
        android:background="@color/app_yellow">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tab_title_more"
            android:textSize="@dimen/textSize_20"
            android:textColor="@color/white"/>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginBottom="@dimen/me_item_common_layout_marginTop"
        android:background="@color/app_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_quai_bg"
                android:layout_marginTop="@dimen/me_item_common_layout_marginTop"
                android:orientation="vertical">
                <RelativeLayout
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_only_wifi_show_picture"/>
                    <CheckBox
                        android:id="@+id/more_btn_wifi_switch"
                        style="@style/more_common_checkBox_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_message_notice"/>
                    <CheckBox
                        android:id="@+id/more_btn_notice_switch"
                        style="@style/more_common_checkBox_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/more_item_share_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_share_settings"/>
                    <ImageView
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/more_item_clear_cache_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_clear_cache"/>
                    <TextView
                        android:id="@+id/more_item_tv_cacheSize"
                        style="@style/more_common_desc_textView_style"
                        android:text="@string/more_item_default_cache_size"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/me_item_common_layout_marginTop"
                android:orientation="vertical"
                android:background="@drawable/white_quai_bg">
                <RelativeLayout
                    android:id="@+id/more_item_comment_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_good_comment"/>
                    <ImageView
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/more_item_feedback_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_feedback"/>
                    <ImageView
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/more_item_contact_kefu_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        android:id="@+id/contact_kefu"
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_contact_kefu"/>
                    <TextView
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentEnd="false"
                        android:layout_toRightOf="@+id/contact_kefu"
                        android:layout_marginLeft="5dp"
                        android:text="@string/more_item_kefu_hours"
                        android:textSize="@dimen/textSize_14"/>
                    <TextView
                        android:id="@+id/more_item_tv_kefu"
                        style="@style/more_common_desc_textView_style"
                        android:text="@string/more_item_kefu_number"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/me_item_common_layout_marginTop"
                android:orientation="vertical"
                android:background="@drawable/white_quai_bg">
                <RelativeLayout
                    android:id="@+id/more_item_check_update_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_check_update"/>
                    <TextView
                        android:id="@+id/more_item_tv_current_version"
                        style="@style/more_common_desc_textView_style"
                        android:text="@string/more_item_current_version"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/more_item_about_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_about"/>
                    <ImageView
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>