<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:background="@color/app_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/me_item_common_layout_marginTop"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/me_item_common_layout_marginTop"
                android:orientation="vertical"
                android:background="@drawable/white_quai_bg">
                <RelativeLayout
                    android:id="@+id/user_item_avatar_layout"
                    style="@style/me_common_item_relativeLayout_style"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/user_item_title_avatar"/>
                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/user_item_avatar"
                        android:layout_width="@dimen/me_login_head_width"
                        android:layout_height="@dimen/me_login_head_height"
                        android:layout_marginEnd="@dimen/me_login_head_marginEnd"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/user_item_avatar_iv_arrow"
                        android:scaleType="fitXY"
                        app:placeholderImage="@mipmap/user_head"/>
                    <ImageView
                        android:id="@+id/user_item_avatar_iv_arrow"
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/user_item_username_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        android:id="@+id/user_item_username_tv_title"
                        style="@style/more_common_item_textView_style"
                        android:text="@string/user_item_title_username"/>
                    <TextView
                        android:id="@+id/user_item_username_tv_username"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentEnd="false"
                        android:layout_toRightOf="@+id/user_item_username_tv_title"
                        android:layout_marginLeft="10dp"
                        tools:text="布拉拉"
                        android:textSize="@dimen/textSize_14"/>
                    <TextView
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentEnd="false"
                        android:layout_toLeftOf="@+id/user_item_username_iv_arrow"
                        android:text="@string/user_item_right_modify"/>
                    <ImageView
                        android:id="@+id/user_item_username_iv_arrow"
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/user_item_nickname_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        android:id="@+id/user_item_nickname_tv_title"
                        style="@style/more_common_item_textView_style"
                        android:text="@string/user_item_title_nickname"/>
                    <TextView
                        android:id="@+id/user_item_nickname_tv_nickname"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentEnd="false"
                        android:layout_toRightOf="@+id/user_item_nickname_tv_title"
                        android:layout_marginLeft="10dp"
                        tools:text="布拉拉"
                        android:textSize="@dimen/textSize_14"/>
                    <TextView
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentEnd="false"
                        android:layout_toLeftOf="@+id/user_item_nickname_iv_arrow"
                        android:text="@string/user_item_right_edit"/>
                    <ImageView
                        android:id="@+id/user_item_nickname_iv_arrow"
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/user_item_bindPhone_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        android:id="@+id/user_item_bindPhone_tv_title"
                        style="@style/more_common_item_textView_style"
                        android:text="@string/user_item_title_bindPhone"/>
                    <TextView
                        android:id="@+id/user_item_bindPhone_tv_nickname"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentEnd="false"
                        android:layout_toRightOf="@+id/user_item_bindPhone_tv_title"
                        android:layout_marginLeft="10dp"
                        tools:text="18186532328"
                        android:textSize="@dimen/textSize_14"/>
                    <TextView
                        android:id="@+id/user_item_bindPhone_tv_state"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentEnd="false"
                        android:layout_toLeftOf="@+id/user_item_bindPhone_iv_arrow"
                        android:text="@string/user_item_right_unbind"/>
                    <ImageView
                        android:id="@+id/user_item_bindPhone_iv_arrow"
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/user_item_payPassword_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/user_item_title_pay_password"/>
                    <TextView
                        android:id="@+id/user_item_payPassword_tv_state"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentEnd="false"
                        android:layout_toLeftOf="@+id/user_item_payPassword_iv_arrow"
                        android:text="@string/user_item_right_unset"/>
                    <ImageView
                        android:id="@+id/user_item_payPassword_iv_arrow"
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/user_item_loginPassword_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/user_item_title_login_password"/>
                    <TextView
                        android:id="@+id/user_item_loginPassword_tv_state"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentEnd="false"
                        android:layout_toLeftOf="@+id/user_item_loginPassword_iv_arrow"
                        android:text="@string/user_item_right_unset"/>
                    <ImageView
                        android:id="@+id/user_item_loginPassword_iv_arrow"
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/me_item_common_layout_marginTop"
                android:orientation="vertical"
                android:background="@drawable/white_quai_bg">
                <RelativeLayout
                    android:id="@+id/user_item_level_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/user_item_title_member_level"/>
                    <ImageView
                        android:id="@+id/user_item_level_iv_level"
                        android:layout_width="@dimen/me_login_level_width"
                        android:layout_height="@dimen/me_login_level_height"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/me_login_level_marginStart"
                        android:layout_toLeftOf="@+id/user_item_level_iv_arrow"
                        android:src="@mipmap/level_0"/>
                    <ImageView
                        android:id="@+id/user_item_level_iv_arrow"
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/me_item_common_layout_marginTop"
                android:orientation="vertical"
                android:background="@drawable/white_quai_bg">
                <RelativeLayout
                    android:id="@+id/user_item_gender_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/user_item_title_gender"/>
                    <TextView
                        android:id="@+id/user_item_gender_tv_state"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentEnd="false"
                        android:layout_toLeftOf="@+id/user_item_gender_iv_arrow"
                        android:text="@string/man"/>
                    <ImageView
                        android:id="@+id/user_item_gender_iv_arrow"
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/user_item_birthday_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/user_item_title_birthday"/>
                    <TextView
                        android:id="@+id/user_item_birthday_tv_state"
                        style="@style/more_common_desc_textView_style"
                        android:layout_alignParentEnd="false"
                        android:layout_toLeftOf="@+id/user_item_birthday_iv_arrow"
                        android:text="@string/user_item_right_select"/>
                    <ImageView
                        android:id="@+id/user_item_birthday_iv_arrow"
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/user_item_address_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/user_item_title_address"/>
                    <ImageView
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/user_item_qr_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/user_item_title_qr"/>
                    <ImageView
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/user_btn_exit_login"
                style="@style/login_btn_style"
                android:text="@string/user_exit_login"
                android:enabled="true"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>